--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <div class="sidenav">
     <a href="index.html"><img class="port" src="guitar.jpg"></a>
     <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#clients">Clients</a>
-    <a href="#contact">Contact</a>
+    <a href="#services">Education</a>
+    <a href="#clients">Work Experience</a>
+    <a href="#contact">Hobbies</a>
   </div>
+
+  <h1>Caelan Smyth</h1>
 
   <div class="main">
     <section id = "about">
