--- a/index.html
+++ b/index.html
@@ -25,6 +25,32 @@
     <section id = "about">
       <h2>About Me</h2>
       <p>I am a second year Computer Applications and Software Engineering student in DCU.</p>
+      <ul class="list-inline list-social-icons mb-0">
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x" style="color:#CACAAA;"></i>
+                  <i class="fa fa-linkedin-square fa-stack-1x fa-inverse" style="color:#0077B5;"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://github.com/caelansmyth">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x" style="color:#CACAAA;"></i>
+                  <i class="fa fa-instagram fa-stack-1x fa-inverse" style="color:#B900B3;"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="mailto:caelan.smyth@gmail.com">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x" style="color:#CACAAA;"></i>
+                  <i class="fa fa-at fa-stack-1x fa-inverse" style="color:#9DC7C8;"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
     </section>
       <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
       <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
