--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <div class="sidenav">
     <a href="index.html"><img class="port" src="guitar.jpg"></a>
     <a href="#about">About</a>
-    <a href="#services">Education</a>
-    <a href="#clients">Work Experience</a>
-    <a href="#contact">Hobbies</a>
+    <a href="#education">Education</a>
+    <a href="#workexp">Work Experience</a>
+    <a href="#hobbies">Hobbies</a>
   </div>
 
   <h1>Caelan Smyth</h1>
@@ -38,7 +38,7 @@
               <a target="_blank" href="https://github.com/caelansmyth">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x" style="color:#CACAAA;"></i>
-                  <i class="fa fa-instagram fa-stack-1x fa-inverse" style="color:#B900B3;"></i>
+                  <i class="fa fa-github fa-stack-1x fa-inverse" style="color:#B900B3;"></i>
                 </span>
               </a>
             </li>
