updated index and layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h1>Caelan Smyth</h1>
 
   <div class="main">
-    <section id = "about">
+    <section id = "about" class="abutt">
       <h2>About Me</h2>
       <p>I am a second year Computer Applications and Software Engineering student in DCU.</p>
       <ul class="list-inline list-social-icons mb-0">
