--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <h1>Caelan Smyth</h1>
 
   <div class="main">
-    <section id = "about" class="abutt">
+    <section id = "about">
       <h2>About Me</h2>
-      <p>I am a second year Computer Applications and Software Engineering student in DCU.</p>
+      <p>I am a second year Computer Applications and Software Engineering student in DCU.<br>I am 19 years old, and I am from Artane, Dublin.</p>
       <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/">
@@ -51,8 +51,11 @@
               </a>
             </li>
           </ul>
+        <div class="abutt" />
     </section>
-      <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    <section id="education">
+      <h2>Education</h2>
+      <p>I attended St. Fintan's High School in Sutton, Dublin 13 for second-level education.<br><br>I am currently an undergraduate in DCU's Computer Applications and Software Engineering course.</p>
       <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
       <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
       <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
