--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
       <p>I attended St. Fintan's High School in Sutton, Dublin 13 for second-level education.<br><br>I am currently an undergraduate in DCU's Computer Applications and Software Engineering course.</p>
       <div class="abutt" />
     </section>
-      <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    <section id="workexp">
+      <h2>Work and Programming Experience</h2>
+      <p>I have been a Crew Member in McDonald's since October 2015.<br><br>I sat in with the IT department of ASL Airlines Ireland Ltd. for a week in 2015 as part of the Transition Year program in secondary school.</p>
+      
+      <div class="abutt" />
+    </section>
       <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
       <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
 </div>
