--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
    <link rel="stylesheet" href="layout.css"/>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
 </head>
 <body>
   <div class="sidenav">
@@ -61,7 +63,30 @@
     <section id="workexp">
       <h2>Work and Programming Experience</h2>
       <p>I have been a Crew Member in McDonald's since October 2015.<br><br>I sat in with the IT department of ASL Airlines Ireland Ltd. for a week in 2015 as part of the Transition Year program in secondary school.</p>
-
+      <h2>Programming Languages</h2>
+      <ul class="list-inline list-social-icons mb-0">
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/">
+                <span class="fa-stack fa-lg">
+                  <i class="devicon-css3-plain" style="color:#2E6E80;"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://github.com/caelansmyth">
+                <span class="fa-stack fa-lg">
+                  <i class="devicon-html5-plain" style="color:#2E6E80;"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="mailto:caelan.smyth@gmail.com">
+                <span class="fa-stack fa-lg">
+                  <i class="devicon-mysql-plain-wordmark"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
       <div class="abutt" />
     </section>
       <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
