--- a/index.html
+++ b/index.html
@@ -63,26 +63,33 @@
     <section id="workexp">
       <h2>Work and Programming Experience</h2>
       <p>I have been a Crew Member in McDonald's since October 2015.<br><br>I sat in with the IT department of ASL Airlines Ireland Ltd. for a week in 2015 as part of the Transition Year program in secondary school.</p>
-      <h2>Programming Languages</h2>
+      <h2>Languages and Skills</h2>
       <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/">
                 <span class="fa-stack fa-lg">
-                  <i class="devicon-css3-plain" style="color:#2E6E80;"></i>
+                  <i class="devicon-css3-plain" style="color:#2E6E80;width:100%;"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
               <a target="_blank" href="https://github.com/caelansmyth">
                 <span class="fa-stack fa-lg">
-                  <i class="devicon-html5-plain" style="color:#2E6E80;"></i>
+                  <i class="devicon-html5-plain" style="color:#2E6E80;width:100%;"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
               <a target="_blank" href="mailto:caelan.smyth@gmail.com">
                 <span class="fa-stack fa-lg">
-                  <i class="devicon-mysql-plain-wordmark"></i>
+                  <i class="devicon-python-plain" style="color:#2E6E80;width:100%;"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="mailto:caelan.smyth@gmail.com">
+                <span class="fa-stack fa-lg">
+                  <i class="devicon-mysql-plain" style="color:#2E6E80;width:100%;"></i>
                 </span>
               </a>
             </li>
