--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="workexp">
       <h2>Work and Programming Experience</h2>
       <p>I have been a Crew Member in McDonald's since October 2015.<br><br>I sat in with the IT department of ASL Airlines Ireland Ltd. for a week in 2015 as part of the Transition Year program in secondary school.</p>
-      <h2>Languages and Skills</h2>
+      <h2>Programming/Web Design Languages</h2>
       <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/">
@@ -96,9 +96,9 @@
           </ul>
       <div class="abutt" />
     </section>
-      <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-      <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-</div>
+    <section id="hobbies">
+      <p>In my spare time, I enjoy playing videogames with my friends, practicing guitar, and working on small web design projects, such as this website.</p>
+    </div>
 
 </body>
 </html>
