--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
     <section id="hobbies">
       <p>In my spare time, I enjoy playing videogames with my friends, practicing guitar, and working on small web design projects, such as this website.</p>
+    </section>
     </div>
-
 </body>
 </html>
