--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="#hobbies">Hobbies</a>
   </div>
 
-  <h1>Caelan Smyth</h1>
+  <h1>Caelan <span style="color:#00161C;">Smyth</span></h1>
 
   <div class="main">
     <section id = "about">
@@ -29,7 +29,6 @@
       <p>I am a second year Computer Applications and Software Engineering student in DCU.<br><br>I am 19 years old.<br><br>I am from Artane, Dublin.</p>
       <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x" style="color:#CACAAA;"></i>
                   <i class="fa fa-linkedin-square fa-stack-1x fa-inverse" style="color:#0077B5;"></i>
@@ -37,7 +36,6 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a target="_blank" href="https://github.com/caelansmyth">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x" style="color:#CACAAA;"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse" style="color:#B900B3;"></i>
@@ -45,7 +43,6 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a target="_blank" href="mailto:caelan.smyth@gmail.com">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x" style="color:#CACAAA;"></i>
                   <i class="fa fa-at fa-stack-1x fa-inverse" style="color:#9DC7C8;"></i>
@@ -97,6 +94,7 @@
       <div class="abutt" />
     </section>
     <section id="hobbies">
+      <h2>Hobbies</h2>
       <p>In my spare time, I enjoy playing videogames with my friends, practicing guitar, and working on small web design projects, such as this website.</p>
     </section>
     </div>
