--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <section id="hobbies">
       <h2>Hobbies</h2>
       <p>In my spare time, I enjoy playing videogames with my friends, practicing guitar, and working on small web design projects, such as this website.</p>
+      <!-- <p>Please Hire Me I'm Desperate</p> -->
     </section>
     </div>
 </body>
