--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
     <section id="hobbies">
       <h2>Hobbies</h2>
-      <p>In my spare time, I enjoy playing videogames with my friends, practicing guitar, and working on small web design projects, such as this website.</p>
+      <p>In my spare time, I enjoy playing videogames with my friends, practicing guitar, and watching movies.</p>
       <!-- <p>Please Hire Me I'm Desperate</p> -->
     </section>
     </div>
