--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Caelan <span style="color:#4C605E;">Smyth</span></h1>
   <footer>
   <p>Contact me</p>
-  <a href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i>
+  <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i>
   <i class="fa fa-github-square"></i>
   <i class="fa fa-envelope-square"></i>
   </footer>
