--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Contact me</p>
   <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
   <i class="fa fa-github-square"></i>
-  <i class="fa fa-envelope-square"></i>
+  <a href="mailto:caelan.smyth@gmail.com"><i class="fa fa-envelope-square"></i></a>
   </footer>
 </body>
 </html>
