--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <h1>Caelan <span style="color:#4C605E;">Smyth</span></h1>
+  <ul class="navbar">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="#about">About Me</a></li>
   <footer>
   <p>Contact me</p>
   <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
