--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <ul class="navbar">
     <li><a href="index.html">Home</a></li>
     <li><a href="#about">About Me</a></li>
+    <li><a href="edu">Education</a></li>
+    <li><a href="#exp">Work Experience</a></li>
   <footer>
   <p>Contact me</p>
   <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
