--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="#exp">Work Experience</a></li>
   </ul>
   <h1>Caelan <span style="color:#4C605E;">Smyth</span></h1>
+  <h2 class="about">About Me</h2>
   <footer>
   <p>Contact me</p>
   <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
