--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="edu">Education</a></li>
     <li><a href="#exp">Work Experience</a></li>
   </ul>
-  <h1>Caelan <span style="color:#4C605E;">Smyth</span></h1>
+  <h1 style="padding:25px;">Caelan <span style="color:#4C605E;">Smyth</span></h1>
   <h2 class="about">About Me</h2>
   <footer>
   <p>Contact me</p>
