--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <footer>
   <p>Contact me</p>
   <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
-  <i class="fa fa-github-square"></i>
+  <a target="_blank" href="https://github.com/caelansmyth"><i class="fa fa-github-square"></i></a>
   <a href="mailto:caelan.smyth@gmail.com"><i class="fa fa-envelope-square"></i></a>
   </footer>
 </body>
