--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <h2 class="about">About Me</h2>
   <footer>
   <p>Contact me</p>
-  <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
-  <a target="_blank" href="https://github.com/caelansmyth"><i class="fa fa-github-square"></i></a>
-  <a href="mailto:caelan.smyth@gmail.com"><i class="fa fa-envelope-square"></i></a>
+  <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square icoro"></i></a>
+  <a target="_blank" href="https://github.com/caelansmyth"><i class="fa fa-github-square icoro"></i></a>
+  <a href="mailto:caelan.smyth@gmail.com"><i class="fa fa-envelope-square icoro"></i></a>
   </footer>
 </body>
 </html>
