--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </ul>
   <h1 style="padding-top:30px;">Caelan <span style="color:#4C605E;">Smyth</span></h1>
   <h2 class="about">About Me</h2>
+  <p>I am 19 years old. I am from Artane, Dublin.<br>My hobbies include playing guitar, listening to music, watching movies and playing video games.</p>
   <footer>
   <p>Contact me</p>
   <a class="icoro" target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
