--- a/index.html
+++ b/index.html
@@ -19,23 +19,9 @@
   <p>I am 19 years old. I am from Artane, Dublin.<br>My hobbies include playing guitar, listening to music, watching movies and playing video games.</p>
   <footer>
   <p>Contact me</p>
-  <ul class="iconslist">
-    <li class="icoro">
-      <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/">
-        <i class="fa fa-linkedin-square"></i>
-      </a>
-      </li>
-    <li class="icoro">
-      <a target="_blank" href="https://github.com/caelansmyth">
-        <i class="fa fa-github-square"></i>
-      </a>
-      </li>
-    <li class="icoro">
-      <a href="mailto:caelan.smyth@gmail.com">
-        <i class="fa fa-envelope-square"></i>
-      </a>
-      </li>
-    </ul>
+  <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
+  <a target="_blank" href="https://github.com/caelansmyth"><i class="fa fa-github-square"></i></a>
+  <a href="mailto:caelan.smyth@gmail.com"><i class="fa fa-envelope-square"></i></a>
   </footer>
 </body>
 </html>
