--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <ul class="navbar">
     <li><a href="index.html">Home</a></li>
     <li><a href="#about">About Me</a></li>
-    <li><a href="edu">Education</a></li>
+    <li><a href="#edu">Education</a></li>
     <li><a href="#exp">Work Experience</a></li>
   </ul>
   <h1 style="padding-top:30px;">Caelan <span style="color:#4C605E;">Smyth</span></h1>
   <h2 class="about">About Me</h2>
   <p class="desc">I am 19 years old. I am from Artane, Dublin.<br>My hobbies include playing guitar, listening to music, watching movies and playing video games.</p>
-
+  <h2 class="edu">Education</h2>
+  <p>The secondary school I attended was St Fintan's High School in Sutton.<br>Currently in second year studying Computer Applications (and Software Engineering) in DCU.</p>
   <footer>
   <p>Contact me</p>
   <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
