--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
     <li><a href="#exp">Work Experience</a></li>
   </ul>
   <h1 style="padding-top:30px;">Caelan <span style="color:#4C605E;">Smyth</span></h1>
-  <h2 class="about">About Me</h2>
-  <p class="desc">I am 19 years old. I am from Artane, Dublin.<br>My hobbies include playing guitar, listening to music, watching movies and playing video games.</p>
-  <h2 class="edu">Education</h2>
-  <p>The secondary school I attended was St Fintan's High School in Sutton.<br>Currently in second year studying Computer Applications (and Software Engineering) in DCU.</p>
+  <div class="about">
+    <h2>About Me</h2>
+    <p>I am 19 years old. I am from Artane, Dublin.<br>My hobbies include playing guitar, listening to music, watching movies and playing video games.</p>
+  </div>
+  <div class="edu">
+    <h2>Education</h2>
+    <p>The secondary school I attended was St Fintan's High School in Sutton.<br>I am currently in second year studying Computer Applications (and Software Engineering) in DCU.</p>
+  </div>
+  <div class="exp">
+    <h2>Work Experience</h2>
+    <h3>ASL Airlines Ireland Ltd.</h3>
+    <p>During transition year in my school I did a week's work experience placement in the IT department of ASL Airlines. Here I was tasked with machine setup, asset tagging and asset inventory.</p><br>
+    <h3>McDonald's Artane (Frisco Ltd.)</h3>
+    <p>Since October 2015, I have worked as a crew member in McDonald's Artane. My jobs include serving customers, order processing and assembly, and stocktaking.</p>
+  </div>
   <footer>
   <p>Contact me</p>
   <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
