--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <h2>About Me</h2>
     <p>I am 19 years old. I am from Artane, Dublin.<br>My hobbies include playing guitar, listening to music, watching movies and playing video games.</p>
   </div>
+  <span class="blanksp"/>
   <div class="edu">
     <h2>Education</h2>
     <p>The secondary school I attended was St Fintan's High School in Sutton.<br>I am currently in second year studying Computer Applications (and Software Engineering) in DCU.</p>
   </div>
+  <span class="blanksp"/>
   <div class="exp">
     <h2>Work Experience</h2>
     <h3>ASL Airlines Ireland Ltd.</h3>
@@ -30,6 +32,7 @@
     <h3>McDonald's Artane (Frisco Ltd.)</h3>
     <p>Since October 2015, I have worked as a crew member in McDonald's Artane. My jobs include serving customers, order processing and assembly, and stocktaking.</p>
   </div>
+  <span class="blanksp"/>
   <footer>
   <p>Contact me</p>
   <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
