--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <ul class="navbar">
     <li><a href="index.html">Home</a></li>
-    <li><a href="#about">About Me</a></li>
-    <li><a href="#edu">Education</a></li>
-    <li><a href="#exp">Work Experience</a></li>
+    <li><a href="about">About Me</a></li>
+    <li><a href="edu">Education</a></li>
+    <li><a href="exp">Work Experience</a></li>
   </ul>
   <h1 style="padding-top:30px;">Caelan <span style="color:#4C605E;">Smyth</span></h1>
   <div class="about">
