--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
   <ul class="navbar">
     <li><a href="index.html">Home</a></li>
-    <li><a href="about">About Me</a></li>
-    <li><a href="edu">Education</a></li>
-    <li><a href="exp">Work Experience</a></li>
+    <li><a href="#about">About Me</a></li>
+    <li><a href="#edu">Education</a></li>
+    <li><a href="#exp">Work Experience</a></li>
   </ul>
   <h1 style="padding-top:30px;">Caelan <span style="color:#4C605E;">Smyth</span></h1>
-  <div class="about">
+  <div id="about">
     <h2>About Me</h2>
     <p>I am 19 years old. I am from Artane, Dublin.<br>My hobbies include playing guitar, listening to music, watching movies and playing video games.</p>
   </div>
   <span class="blanksp"/>
-  <div class="edu">
+  <div id="edu">
     <h2>Education</h2>
     <p>The secondary school I attended was St Fintan's High School in Sutton.<br>I am currently in second year studying Computer Applications (and Software Engineering) in DCU.</p>
   </div>
   <span class="blanksp"/>
-  <div class="exp">
+  <div id="exp">
     <h2>Work Experience</h2>
     <h3>ASL Airlines Ireland Ltd.</h3>
     <p>During transition year in my school I did a week's work experience placement in the IT department of ASL Airlines. Here I was tasked with machine setup, asset tagging and asset inventory.</p><br>
