icon fix hopefully

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <span class="blanksp"/>
   <footer>
   <p>Contact me</p>
-  <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square"></i></a>
-  <a target="_blank" href="https://github.com/caelansmyth"><i class="fa fa-github-square"></i></a>
-  <a href="mailto:caelan.smyth@gmail.com"><i class="fa fa-envelope-square"></i></a>
+  <a target="_blank" href="https://www.linkedin.com/in/caelan-smyth-1652b2154/"><i class="fa fa-linkedin-square, fa-stack-1x"></i></a>
+  <a target="_blank" href="https://github.com/caelansmyth"><i class="fa fa-github-square, fa-stack-1x"></i></a>
+  <a href="mailto:caelan.smyth@gmail.com"><i class="fa fa-envelope-square, fa-stack-1x"></i></a>
   </footer>
 </body>
 </html>
